# cake_shop

./: pyproject.toml
cake_shop/: asgi.py  settings.py  urls.py  wsgi.py
member/: forms.py  models.py  urls.py  views.py
member/migrations/: 0001_initial.py
store/: models.py  views.py
store/migrations/: 0001_initial.py  0002_category_name_product_name_specification_flavor.py  0003_specification_size.py
templates/member/: edit.html  index.html  list.html  new.html  show.html
templates/store/: index.html
